Edited the swagger page to seperate every type of trigger.
